--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24"
+  },
+  "dependencies": {
+    "flowbite": "^1.5.4"
   }
 }
